Name:		     bittorrent
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Markus Barenhoff
Maintainer:          Markus Barenhoff <alios@alios.org>
Copyright:	     Markus Barenhoff 2011
Homepage:            http://github.com/alios/bittorrent

Stability:           Stable
Category:            Network
Synopsis: 	     A pure haskell bittorrent implementation

Build-type:          Simple
Cabal-version:       >=1.8
Tested-With:	     GHC==6.12.2


Library
  Exposed-Modules:
    Data.Bittorrent

  Build-depends: 
   base >= 4, network >= 2, HTTP >= 4000, Crypto >= 4, containers,
   binary, encoding, filepath, binary, transformers, bytestring,
   directory

  GHC-Options: -threaded -Wall -Wwarn -O2 -fno-warn-name-shadowing 
               -fno-warn-missing-signatures -fwarn-tabs -fwarn-unused-imports
